--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -1010,6 +1010,14 @@ msgstr "Kaikki pisteet"
 msgid "VISUALIZATIONS"
 msgstr "Visualisoinnit"
 
+#: course/templates/course/_course_menu.html
+msgid "UNPSEUDONYMIZE"
+msgstr "Pseudonymisointi pois päältä"
+
+#: course/templates/course/_course_menu.html
+msgid "PSEUDONYMIZE"
+msgstr "Pseudonymisointi päälle"
+
 #: course/templates/course/_course_menu.html news/templates/news/edit.html
 #: news/templates/news/list.html
 msgid "EDIT_NEWS"
@@ -1030,14 +1038,6 @@ msgstr "Määräaikojen poikkeamat"
 #: deviations/templates/deviations/list_submissions.html
 msgid "SUBMISSION_DEVIATIONS"
 msgstr "Palautuskertojen poikkeamat"
-
-#: course/templates/course/_course_menu.html
-msgid "UNPSEUDONYMIZE"
-msgstr "Pseudonymisointi pois päältä"
-
-#: course/templates/course/_course_menu.html
-msgid "PSEUDONYMIZE"
-msgstr "Pseudonymisointi päälle"
 
 #: course/templates/course/_enroll_form.html
 msgid "ENROLL_THROUGH_SIS"
@@ -4509,6 +4509,8 @@ msgid "SUMMARY"
 msgstr "Yhteenveto"
 
 #: exercise/templates/exercise/staff/_submissions_table.html
+#, fuzzy, python-format
+#| msgid "NUM_OF_SUBMISSIONS_DISPLAYED -- %(count)s, %(url)s"
 msgid "NUM_OF_SUBMISSIONS_DISPLAYED -- %(count)s, %(url)s"
 msgstr "%(count)s palautusta."
 
@@ -5500,6 +5502,10 @@ msgstr "Valitse koko kurssi"
 #: lti_tool/templates/lti_tool/module_list.html
 msgid "LTI_SELECT_SPECIFIC_CONTENT"
 msgstr "Valitse tarkempaa sisältöä"
+
+#: lti_tool/templates/lti_tool/course_list.html
+msgid "LTI_CONFIRM_USE_WHOLE_COURSE"
+msgstr "Haluatko varmasti valita koko kurssin?"
 
 #: lti_tool/templates/lti_tool/exercise_list.html
 #: lti_tool/templates/lti_tool/module_list.html
