Fix LTI tool issues (#1405)
Added a confirmation dialog for importing the contents
of a whole course via LTI in order to reduce the likelyhood
of accidentally importing a whole course's worth of content.

Also updated LTI module related views with correct classes
when rewriting exercise links with lti-exercise URLs, since
currently in production the isinstance calls don't match
the module exercises.

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -5546,6 +5546,10 @@ msgstr "Use the whole course"
 msgid "LTI_SELECT_SPECIFIC_CONTENT"
 msgstr "Select specific content"
 
+#: lti_tool/templates/lti_tool/course_list.html
+msgid "LTI_CONFIRM_USE_WHOLE_COURSE"
+msgstr "Are you sure you want to use the whole course?"
+
 #: lti_tool/templates/lti_tool/exercise_list.html
 #: lti_tool/templates/lti_tool/module_list.html
 msgid "LTI_GO_BACK"
