--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -5823,6 +5823,14 @@ msgstr "Feedback"
 msgid "LOADING_FAILED"
 msgstr "Loading failed!"
 
+#: templates/base.html
+msgid "CHANGE_LANGUAGE_TO_ENGLISH"
+msgstr "Change language to English"
+
+#: templates/base.html
+msgid "CHANGE_LANGUAGE_TO_FINNISH"
+msgstr "Change language to Finnish"
+
 #: templates/support_channels.html
 msgid "TEACHERS"
 msgstr "Teachers"
