Rethink the sidebar. Lots of fixes for dark mode and BS5.

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -947,8 +947,8 @@ msgid "CHANGE_LANGUAGE"
 msgstr "Change language"
 
 #: course/templates/course/_course_menu.html
-msgid "CLOSE_SIDEBAR"
-msgstr "Close sidebar"
+msgid "MINIMISE_SIDEBAR"
+msgstr "Minimise sidebar"
 
 #: course/templates/course/_course_menu.html
 #: edit_course/templates/edit_course/edit_course_base.html
@@ -1094,11 +1094,11 @@ msgstr ""
 #: course/templates/course/_group_info.html
 #, python-format
 msgid "GROUP_SUBMITTING_WITH -- %(collaborators)s"
-msgstr "You are now submitting with %(collaborators)s. "
+msgstr "Submitting with %(collaborators)s. "
 
 #: course/templates/course/_group_info.html
 msgid "GROUP_SUBMITTING_ALONE"
-msgstr "You are now submitting alone."
+msgstr "Submitting alone."
 
 #: course/templates/course/_group_select.html
 msgid "GROUP_LOADER_REGISTERING_SELECTION"
@@ -1134,8 +1134,8 @@ msgid "LEFT_OFF_REMINDER"
 msgstr "Continue where you left off"
 
 #: course/templates/course/course_base.html
-msgid "OPEN_SIDEBAR"
-msgstr "Open sidebar"
+msgid "EXPAND_SIDEBAR"
+msgstr "Expand sidebar"
 
 #: course/templates/course/course_base.html
 msgid "READ_MORE"
